K8/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix-frontend
  template:
    metadata:
      labels:
        app: netflix-frontend
    spec:
      containers:
      - name: netflix-frontend
        image: 203071037199.dkr.ecr.ap-south-1.amazonaws.com/netflix-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
