K8/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: netflix-frontend
  ports:
  - port: 80
    targetPort: 80
